--- a/webroot_files/css/style1.css
+++ b/webroot_files/css/style1.css
@@ -1673,7 +1673,7 @@ ul.campaign_list li {
 	background-color: #f0f0f0;
 }
 
-ul.nothing-to-display{
+#nothing-to-display {
 	text-align: center;
 }
 
